--- a/index.html
+++ b/index.html
@@ -191,9 +191,7 @@
 </div>				
 </div>
 
-
-<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-
+<script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/chaffle.min.js"></script>
 <script>
 $(document).ready(function() {
