--- a/prof.html
+++ b/prof.html
@@ -48,8 +48,7 @@ $(function(){
 
         <div class="prof"><img src="prof.png"></div>
 
-<h2>伊藤萌里<br>
-Design / Illust</h2>
+<h2>伊藤萌里</h2>
 <p>
 1987年 東京の下町生まれ<br>
 2010年 多摩美術大学情報デザイン学科卒<br>
