--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@ $(function(){
         <a href="michikozakura/index.html" class="thumbnail" category="package"><img src="michikozakura/michikozakura.jpg"></a> 
         <a href="insideout/index.html" class="thumbnail" category="leaflet"><img src="insideout/insideout.jpg"></a>
         <a href="telete/index.html" class="thumbnail" category="leaflet"><img src="telete/telete.jpg"></a> 
+        <a href="seidensha/index.html" class="thumbnail" category="other"><img src="seidensha/seidensha.png"></a> 
         <a href="michizakura/index.html" class="thumbnail" category="package"><img src="michizakura/michizakura.jpg"></a> 
         <a href="michizakuraweb/index.html" class="thumbnail" category="web"><img src="michizakuraweb/michizakura.png"></a> 
+        <a href="kaijo/index.html" class="thumbnail" category="leaflet"><img src="kaijo/kaijo.jpg"></a>
         <a href="mask/index.html" class="thumbnail" category="package"><img src="mask/mask.jpg"></a>
         <a href="hanamiyama/index.html" class="thumbnail" category="other"><img src="hanamiyama/hanamiyama.jpg"></a>
         <a href="candy/index.html" class="thumbnail" category="other"><img src="candy/candy.jpg"></a>
@@ -66,12 +68,14 @@ $(function(){
         <a href="sakuranigori/index.html" class="thumbnail" category="package"><img src="sakuranigori/sakuranigori.jpg"></a>
         <a href="3clabo/index.html" class="thumbnail" category="other"><img src="3clabo/3clabo.png"></a>
         <a href="chouonpa/index.html" class="thumbnail" category="web"><img src="chouonpa/chouonpa.png"></a>
-        <a href="setana/index.html" class="thumbnail" category="package"><img src="setana/setana.jpg"></a>
+        <a href="THkikaku/index.html" class="thumbnail" category="other"><img src="THkikaku/THkikaku.png"></a>
         <a href="chouchou/index.html" class="thumbnail" category="web"><img src="chouchou/chouchou.png"></a>
         <a href="harmony/index.html" class="thumbnail" category="leaflet"><img src="harmony/harmonyland.png"></a>
+        <a href="JUC/index.html" class="thumbnail" category="web"><img src="JUC/JUC.png"></a>
         <a href="mygum/index.html" class="thumbnail" category="leaflet"><img src="mygum/mygum.jpg"></a>
         <a href="fruitbo/index.html" class="thumbnail" category="package"><img src="fruitbo/fruitbo.png"></a>
         <a href="oyomesan/index.html" class="thumbnail" category="package"><img src="oyomesan/oyomesan.jpg"></a>
+        <a href="setana/index.html" class="thumbnail" category="package"><img src="setana/setana.jpg"></a>
         <a href="renobeego/index.html" class="thumbnail" category="web"><img src="renobeego/renobeego.png"></a>
         <a href="cocoiku/index.html" class="thumbnail" category="other"><img src="cocoiku/cocoiku.jpg"></a>
         <a href="itomap/index.html" class="thumbnail" category="leaflet"><img src="itomap/itomap.png"></a>
